--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,10 @@
     <string name="LEDebug">Debug Off</string>
     <string name="distance">Distance: </string>
     <string name="VibRate">Rate: </string>
+    <string name="Sensitivity"> Sensitivity: 1.0</string>
+    <string name="ButtonPlus">+</string>
+    <string name="ButtonMinus">-</string>
+    <string name="SensorVal">Sensor Values</string>
+    <string name="ActorVal">Actor Values</string>
 
 </resources>
